--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 	<head>
 		<title>My Blog</title>
-		<link rel="stylesheet" type="text/css" href="CSS\stylesheet.css">
 	</head>
-	<body>
-		<div id="one">
-			<h1>about me</h1>
-			<p>我叫。。，我喜欢。。。。。。，我想告诉你。。。。。。。</p>
-			<img src="picture\111.jpg">
+	<body background="picture\一辈子.jpg">
 
-		</div>
+			<h1>about me</h1>
+			<p >我叫。。，我喜欢。。。。。。，我想告诉你。。。。。。。</p>
+			<a href="首页.html">首页</a>
+			<a href="图片.html">图片</a>
+			<a href="关于我.html">关于我</a>
+		
 		
 
 	</body>
